--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body {
   text-align: center;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 .errorInput {
   border: 1px solid lightcoral;
   background-color: pink;
@@ -52,8 +56,13 @@ table td {
 table td input {
   width: 100%;
   border-radius: 5px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  border: 0;
   /* padding: 0 3px; */
+}
+
+.hidden {
+  display: none;
 }
 
 .header {
@@ -92,6 +101,9 @@ table td input {
 }
 .station__table {
 }
+.station__table td:nth-child(2) {
+  text-align: center;
+}
 .station__table td:nth-child(1) {
   width: 30%;
 }
@@ -105,6 +117,25 @@ table td input {
 .vneshnee-eletrosnabzhenie__vid-istochnika,
 .garant-and-negarant-load__table {
   width: 100%;
+}
+
+.buttonResult {
+  display: block;
+  width: 300px;
+  height: 100px;
+  background-color: white;
+  border-radius: 5px;
+  margin: 50px auto;
+  border: 1px solid black;
+}
+
+.buttonResult:hover {
+  cursor: pointer;
+}
+
+.buttonResult:active {
+  background-color: lightgray;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.85);
 }
 
 .footer {
@@ -123,10 +154,6 @@ table td input {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.85);
 }
 
-.error-window.hidden {
-  display: none;
-}
-
 .close-sign {
   position: absolute;
   top: 5px;
@@ -143,6 +170,21 @@ table td input {
 
 .error-window__list {
   padding: 10px 5px 10px 15px;
+}
+
+.tableResult {
+}
+
+.tableResult.visible {
+  display: table;
+}
+
+.tableResult tr td {
+  text-align: center;
+}
+
+.tableResult tr td:nth-child(2) {
+  text-align: left;
 }
 
 @media screen and (max-width: 640px) {
