--- a/style.css
+++ b/style.css
@@ -71,7 +71,29 @@ table td input {
 
 .header {
   height: 200px;
-  background-color: #337a61; /* #11a676 */
+  background-color: #1f8a70; /* #11a676 */
+}
+
+.header_logo {
+  width: 200px;
+  height: 200px;
+}
+
+.header_title {
+  font-size: 18pt;
+  color: black;
+  font-weight: bold;
+  text-align: center;
+  width: 100%;
+  margin-left: -200px;
+}
+
+.container-header {
+  width: 95%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
 }
 
 .container-main {
@@ -182,6 +204,27 @@ table td input {
 
 .tableResult tr td {
   text-align: center;
+}
+
+@media screen and (max-width: 1150px) {
+  .header_title {
+    margin-left: -130px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .header_title {
+    margin-left: -100px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .header_logo {
+    width: 150px;
+    height: 150px;
+  }
+  .header_title {
+    margin-left: -100px;
+  }
 }
 
 @media screen and (max-width: 640px) {
